[gd_scene load_steps=3 format=3 uid="uid://bcnmymjri4tt2"]

[ext_resource type="Texture2D" uid="uid://ddpix5j1t4swg" path="res://icon.png" id="1"]
[ext_resource type="Script" path="res://Pseudolocalization.gd" id="2"]

[node name="Pseudolocalization" type="Node2D"]
script = ExtResource( "2" )

[node name="Title" type="Label" parent="."]
offset_left = 140.0
offset_top = 19.0
offset_right = 1024.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 30
text = "Pseudolocalization Demo"
vertical_alignment = 1

[node name="icon" type="Sprite2D" parent="Title"]
position = Vector2(-66, 47)
scale = Vector2(0.78563, 0.78563)
texture = ExtResource( "1" )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 19.0
offset_top = 142.0
offset_right = 1031.0
offset_bottom = 600.0
size_flags_vertical = 3

[node name="Pseudolocalization_options" type="VBoxContainer" parent="HBoxContainer"]
layout_direction = 2
offset_right = 502.0
offset_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="toggle" type="CheckButton" parent="HBoxContainer/Pseudolocalization_options"]
offset_right = 502.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Toggle Pseudolocalization"

[node name="accents" type="CheckButton" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 35.0
offset_right = 502.0
offset_bottom = 66.0
size_flags_horizontal = 3
text = "Toggle Accents"

[node name="doublevowels" type="CheckButton" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 70.0
offset_right = 502.0
offset_bottom = 101.0
size_flags_horizontal = 3
text = "Toggle Double Vowels"

[node name="fakebidi" type="CheckButton" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 105.0
offset_right = 502.0
offset_bottom = 136.0
size_flags_horizontal = 3
text = "Toggle Fake Bidi"

[node name="override" type="CheckButton" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 140.0
offset_right = 502.0
offset_bottom = 171.0
size_flags_horizontal = 3
text = "Toggle Override"

[node name="skipplaceholders" type="CheckButton" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 175.0
offset_right = 502.0
offset_bottom = 206.0
size_flags_horizontal = 3
text = "Skip Placeholders"

[node name="exp_ratio" type="HBoxContainer" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 210.0
offset_right = 502.0
offset_bottom = 241.0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Pseudolocalization_options/exp_ratio"]
offset_bottom = 31.0

[node name="Label" type="Label" parent="HBoxContainer/Pseudolocalization_options/exp_ratio"]
offset_left = 4.0
offset_right = 141.0
offset_bottom = 31.0
size_flags_horizontal = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
text = "Expansion Ratio : "

[node name="TextEdit" type="LineEdit" parent="HBoxContainer/Pseudolocalization_options/exp_ratio"]
offset_left = 403.0
offset_right = 502.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="prefix" type="Control" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 245.0
offset_right = 502.0
offset_bottom = 245.0
size_flags_horizontal = 3

[node name="TextEdit" type="LineEdit" parent="HBoxContainer/Pseudolocalization_options/prefix"]
offset_left = 5.0
offset_top = 32.8613
offset_right = 385.0
offset_bottom = 62.8613
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Pseudolocalization_options/prefix"]
offset_left = 6.0
offset_top = 2.86133
offset_right = 297.0
offset_bottom = 28.8613
text = "Pseudolocalization Prefix :"

[node name="suffix" type="Control" parent="HBoxContainer/Pseudolocalization_options"]
offset_top = 249.0
offset_right = 502.0
offset_bottom = 249.0
size_flags_horizontal = 3

[node name="TextEdit" type="LineEdit" parent="HBoxContainer/Pseudolocalization_options/suffix"]
offset_left = 3.811
offset_top = 106.592
offset_right = 383.811
offset_bottom = 136.592
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Pseudolocalization_options/suffix"]
offset_left = 6.0
offset_top = 76.5923
offset_right = 297.0
offset_bottom = 102.592
text = "Pseudolocalization Suffix :"

[node name="Pseudolocalizer" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 506.0
offset_right = 1008.0
offset_bottom = 458.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Pseudolocalizer"]
offset_right = 502.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Pseudolocalization key :"

[node name="Key" type="TextEdit" parent="HBoxContainer/Pseudolocalizer"]
offset_top = 30.0
offset_right = 502.0
offset_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "The quick brown fox jumped over the lazy dog."

[node name="margin" type="MarginContainer" parent="HBoxContainer/Pseudolocalizer"]
offset_top = 149.0
offset_bottom = 149.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Pseudolocalize" type="Button" parent="HBoxContainer/Pseudolocalizer"]
offset_left = 189.0
offset_top = 153.0
offset_right = 312.0
offset_bottom = 184.0
size_flags_horizontal = 6
text = "Pseudolocalize"

[node name="margin2" type="MarginContainer" parent="HBoxContainer/Pseudolocalizer"]
offset_top = 188.0
offset_bottom = 188.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label2" type="Label" parent="HBoxContainer/Pseudolocalizer"]
offset_top = 192.0
offset_right = 502.0
offset_bottom = 218.0
text = "Pseudolocalization result :"

[node name="Result" type="TextEdit" parent="HBoxContainer/Pseudolocalizer"]
offset_top = 222.0
offset_right = 502.0
offset_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="A2Z" type="Label" parent="HBoxContainer/Pseudolocalizer"]
offset_top = 342.0
offset_right = 502.0
offset_bottom = 458.0
size_flags_vertical = 7
text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ
abcdefghijklmnopqrstuvwxyz"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
offset_left = 1012.0
offset_right = 1012.0
offset_bottom = 458.0

[connection signal="toggled" from="HBoxContainer/Pseudolocalization_options/toggle" to="." method="_on_toggle_toggled"]
[connection signal="toggled" from="HBoxContainer/Pseudolocalization_options/accents" to="." method="_on_accents_toggled"]
[connection signal="toggled" from="HBoxContainer/Pseudolocalization_options/doublevowels" to="." method="_on_doublevowels_toggled"]
[connection signal="toggled" from="HBoxContainer/Pseudolocalization_options/fakebidi" to="." method="_on_fakebidi_toggled"]
[connection signal="toggled" from="HBoxContainer/Pseudolocalization_options/override" to="." method="_on_override_toggled"]
[connection signal="toggled" from="HBoxContainer/Pseudolocalization_options/skipplaceholders" to="." method="_on_skipplaceholders_toggled"]
[connection signal="text_changed" from="HBoxContainer/Pseudolocalization_options/exp_ratio/TextEdit" to="." method="_on_expansion_ratio_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Pseudolocalization_options/prefix/TextEdit" to="." method="_on_prefix_changed"]
[connection signal="text_changed" from="HBoxContainer/Pseudolocalization_options/suffix/TextEdit" to="." method="_on_suffix_changed"]
[connection signal="pressed" from="HBoxContainer/Pseudolocalizer/Pseudolocalize" to="." method="_on_Pseudolocalize_pressed"]
